@startuml
skinparam backgroundColor #FEFEFE
skinparam defaultFontSize 12
skinparam classFontSize 13
skinparam classAttributeFontSize 11
skinparam packageFontSize 14
skinparam packageStyle frame
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #333333

title Diagrama de Clases de Diseño (MVC)\nConstancia de Alumno Inscrito

package "com.mycompany.constanciaalumno.modelo" #E8F5E9 {
    class Alumno {
        - id : String
        - nombre : String
        - apellido : String
        - carrera : String
        - semestre : int
        - materias : ArrayList<Materia>
        --
        + Alumno(id, nombre, apellido, carrera, semestre)
        + agregarMateria(m : Materia) : void
        + getId() : String
        + getNombre() : String
        + getApellido() : String
        + getNombreCompleto() : String
        + getCarrera() : String
        + getSemestre() : int
        + getMaterias() : List<Materia>
        + getCantidadMaterias() : int
        + getTotalCreditos() : int
        + toString() : String
    }

    class Materia {
        - clave : String
        - nombre : String
        - creditos : int
        --
        + Materia(clave, nombre, creditos)
        + getClave() : String
        + getNombre() : String
        + getCreditos() : int
        + toString() : String
    }

    interface IAlumnoObservable {
        + agregarObservador(o : IAlumnoObserver) : void
        + removerObservador(o : IAlumnoObserver) : void
        + notificarObservadores() : void
        + getAlumnosFiltrados() : List<Alumno>
        + getAlumnoSeleccionado() : Alumno
        + getMensajeBusqueda() : String
    }

    class DatosAlumnos {
        - todosLosAlumnos : ArrayList<Alumno>
        - alumnosFiltrados : List<Alumno>
        - alumnoSeleccionado : Alumno
        - observadores : List<IAlumnoObserver>
        --
        + DatosAlumnos()
        + agregarObservador(o : IAlumnoObserver) : void
        + removerObservador(o : IAlumnoObserver) : void
        + notificarObservadores() : void
        + filtrarAlumnos(texto : String) : void
        + seleccionarAlumno(index : int) : void
        + getAlumnoSeleccionado() : Alumno
    }

    DatosAlumnos .up.|> IAlumnoObservable

    Alumno "1" *-right-> "*" Materia : contiene
    DatosAlumnos ..> Alumno : crea
    DatosAlumnos ..> Materia : crea
}

package "com.mycompany.constanciaalumno.vista" #BBDEFB {
    interface IAlumnoObserver {
        + actualizar(observable : IAlumnoObservable) : void
    }

    class VentanaConstancia <<JFrame>> {
        - txtId : JTextField
        - listaAlumnos : JList<String>
        - modeloLista : DefaultListModel<String>
        - txtInfo : JTextArea
        - btnGenerar : JButton
        - scrollLista : JScrollPane
        - scrollInfo : JScrollPane
        --
        + VentanaConstancia()
        - initComponents() : void
        + getTxtId() : JTextField
        + getListaAlumnos() : JList<String>
        + getModeloLista() : DefaultListModel<String>
        + getTxtInfo() : JTextArea
        + getBtnGenerar() : JButton
        + getScrollInfo() : JScrollPane
        + actualizar(observable : IAlumnoObservable) : void
        + renderizarVistaConstancia(observable : IAlumnoObservable) : void
    }
    
    VentanaConstancia .up.|> IAlumnoObserver
}

package "com.mycompany.constanciaalumno.controlador" #FFF9C4 {
    class ControladorConstancia {
        - vista : VentanaConstancia
        - modelo : DatosAlumnos
        --
        + ControladorConstancia(vista : VentanaConstancia)
        - inicializarEventos() : void
        - filtrarAlumnos() : void
    }
}

package "com.mycompany.constanciaalumno" #F3E5F5 {
    class Main {
        --
        + {static} main(args : String[]) : void
    }
}

ControladorConstancia "1" -left-> "1" VentanaConstancia : vista
ControladorConstancia "1" -down-> "1" DatosAlumnos : modelo
ControladorConstancia ..> Alumno : usa
IAlumnoObservable -> "*" IAlumnoObserver : notifica
Main ..> VentanaConstancia : crea
Main ..> ControladorConstancia : crea

note bottom of "com.mycompany.constanciaalumno.modelo"
  **MODEL** - Capa de datos
  Entidades del dominio y
  acceso a datos
end note

note bottom of "com.mycompany.constanciaalumno.vista"
  **VIEW** - Capa de presentación
  Solo componentes Swing,
  sin lógica de negocio
end note

note bottom of "com.mycompany.constanciaalumno.controlador"
  **CONTROLLER** - Capa de control
  Lógica de negocio, eventos
  y coordinación MVC
end note
@enduml
